--- a/Client/package.json
+++ b/Client/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.28",
     "bootstrap": "^4.3.0",
     "final-form": "^4.11.1",
+    "graphql": "^14.1.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
+    "react-apollo": "^2.4.1",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
     "react-final-form": "^4.0.2",
+    "react-google-login": "^5.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-slick": "^0.23.2",
+    "react-toastify": "^4.5.2",
+    "react-tooltip": "^3.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
