--- a/Server/package.json
+++ b/Server/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "start": "nodemon index.js",
     "server": "nodemon index.js",
-    "client":" cd ../Client && npm start",
-    "dev":" concurrently \"npm run server\" \"npm run client \" ", 
+    "client": "cd ../Client && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sandeep Singh",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
