--- a/Client/package.json
+++ b/Client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.15.0",
     "apollo-boost": "^0.1.28",
     "bootstrap": "^4.3.0",
     "final-form": "^4.11.1",
     "graphql": "^14.1.1",
     "node-sass": "^4.11.0",
+    "rc-drawer": "^1.7.7",
     "react": "^16.8.1",
     "react-apollo": "^2.4.1",
     "react-bootstrap": "^1.0.0-beta.5",
